<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Anoia Shopping</string>

    <!-- Screen Strings -->

    <string-array name="tipusDeBotigues">
        <item>Informatica</item>
        <item>Alimentacio</item>
        <item>Roba</item>
        <item>Electrodomestics</item>
    </string-array>


    <string name="logIn">Iniciar Sessió</string>
    <string name="logIn2">INICIAR SESSIÓ</string>
    <string name="OkLogIn">Inici Correcte, Benvingut</string>
    <string name="FailLogIn">ERROR! Email i/o contrassenya incorrectes</string>
    <string name="logo">Logotip</string>
    <string name="singIn"><u>Registrar-se</u></string>
    <string name="singInButton">Registrar-se</string>
    <string name="singInTop">REGISTRE</string>
    <string name="username">Nom d\'Usuari</string>
    <string name="password">Contrassenya</string>
    <string name="passwordRepeat">Repetir Contrassenya</string>
    <string name="firstName">Nom</string>
    <string name="lastName">Cognom</string>
    <string name="email">Correu Electrònic</string>
    <string name="conditions">Al clicar, acceptes els termes i condicions d\'ús</string>
    <string name="forgotPassword"><u>Has olvidat la contrassenya?</u></string>
    <string name="welcome">BENVINGUT!!<br />GRÀCIES PER UTILITZAR LA NOSTRA PLATAFORMA</string>
    <string name="settings">Configuració</string>

    <string name="update">Canviar foto</string>
    <string name="actualize">Actualitzar compte</string>
    <string name="delete">Eliminar compte</string>

    <string name="logOut">Tancar Sessió</string>
    <string name="editProfile">Editar perfil</string>

    <string name="searchUser">Buscar Usuari</string>
    <string name="search">Buscar</string>

    <!-- Error Strings-->

    <string name="emptyUsername">Escriu un Nom d\'Usuari</string>
    <string name="wrongUsername">Nom d\'Usuari incorrecte. El Nom d\'Usuari només pot tenir majúscules, minúscules, guions i guions baixos</string>

    <string name="emptyFirstName">Escriu el teu Nom</string>
    <string name="wrongFirstName">Nom incorrecte. El Nom només pot tenir majúscules i minúscules</string>

    <string name="emptyLastName">Escriu el teu Cognom</string>
    <string name="wrongLastName">Cognom incorrecte. El Cognom només pot tenir majúscules i minúscules</string>

    <string name="emptyEmail">Escriu el teu Correu Electrònic</string>
    <string name="wrongEmail">Comprobi que ha escrit bé el seu correu</string>

    <string name="emptyPassword">Escriu una Contrassenya</string>
    <string name="wrongPassword">Contrassenya incorrecte. La Contrassenya ha de ser mínim 8 caràcters de llarg, ha de tenir mínim una majúscula, una minúscula, un número i algun caràcter especial.</string>
    <string name="samePassword">Les Contrassenyes han de coincidir</string>

    <string name="noError">Camp Correcte</string>

    <string name="textview1">TextView</string>
    <string name="textview">TextView</string>
    <string name="botiga_negoci">Botiga/Negoci</string>
    <string name="consumidor">Consumidor</string>
    <string name="todo">TODO</string>
    <string name="tipus_de_botiga">TIPUS DE BOTIGA</string>
    <string name="definicio_botiga">definicio_botiga</string>
    <string name="applogotipo">App Logotipo</string>

    <!-- EULA: Terms and conditions -->
    <string name="accept">Accept</string>

    <string name="eula_string"> <![CDATA[
        <h2>End-User License Agreement (EULA) of <span class="app_name">Anoia Shopping</span></h2>

        <p>This End-User License Agreement ("EULA") is a legal agreement between you and <span class="company_name">Anoia Shopping</span>. Our EULA was created by <a href="https://www.eulatemplate.com">EULA Template</a> for <span class="app_name">Anoia Shopping</span>.</p></p>

        <p>This EULA agreement governs your acquisition and use of our <span class="app_name">Anoia Shopping</span> software ("Software") directly from <span class="company_name">Anoia Shopping</span> or indirectly through a <span class="company_name">Anoia Shopping</span> authorized reseller or distributor (a "Reseller"). Our Privacy Policy was created by <a href="https://www.generateprivacypolicy.com/">the Privacy Policy Generator</a>.</p>

        <p>Please read this EULA agreement carefully before completing the installation process and using the <span class="app_name">Anoia Shopping</span> software. It provides a license to use the <span class="app_name">Anoia Shopping</span> software and contains warranty information and liability disclaimers.</p>

        <p>If you register for a free trial of the <span class="app_name">Anoia Shopping</span> software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the <span class="app_name">Anoia Shopping</span> software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>

        <p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>

        <p>This EULA agreement shall apply only to the Software supplied by <span class="company_name">Anoia Shopping</span> herewith regardless of whether other software is referred to or described herein. The terms also apply to any <span class="company_name">Anoia Shopping</span> updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.</p>

        <h3>License Grant</h3>

        <p><span class="company_name">Anoia Shopping</span> hereby grants you a personal, non-transferable, non-exclusive licence to use the <span class="app_name">Anoia Shopping</span> software on your devices in accordance with the terms of this EULA agreement.</p>

        <p>You are permitted to load the <span class="app_name">Anoia Shopping</span> software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the <span class="app_name">Anoia Shopping</span> software.</p>

        <p>You are not permitted to:</p>

        <ul>
        <li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
        <li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
        <li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
        <li>Use the Software in any way which breaches any applicable local, national or international law</li>
        <li>use the Software for any purpose that <span class="company_name">Anoia Shopping</span> considers is a breach of this EULA agreement</li>
        </ul>

        <h3>Intellectual Property and Ownership</h3>

        <p><span class="company_name">Anoia Shopping</span> shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of <span class="company_name">Anoia Shopping</span>.</p>

        <p><span class="company_name">Anoia Shopping</span> reserves the right to grant licences to use the Software to third parties.</p>

        <h3>Termination</h3>

        <p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <span class="company_name">Anoia Shopping</span>.</p>

        <p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>

        <h3>Governing Law</h3>

        <p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">es</span>.</p>
        ]]>
    </string>
    <string name="actualizar">Actualizar</string>
    <string name="definici_botiga">DEFINICIÓ BOTIGA</string>
</resources>