<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="dam.anoiashopping.gtidic.udl.cat.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LoginActivity">

        <ImageView
            android:id="@+id/i_Logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/applogotipo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@drawable/as1" />

        <EditText
            android:id="@+id/i_loginusername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:text="@={viewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/i_Logo"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/i_loginpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="@+id/i_loginusername"
            app:layout_constraintStart_toStartOf="@+id/i_loginusername"
            app:layout_constraintTop_toBottomOf="@+id/i_loginusername"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/b_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.onLogin()}"
            android:text="@string/logIn2"
            app:layout_constraintEnd_toEndOf="@+id/i_loginpassword"
            app:layout_constraintStart_toStartOf="@+id/i_loginpassword"
            app:layout_constraintTop_toBottomOf="@+id/i_loginpassword" />

        <Button
            android:id="@+id/b_registre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.onRegisterClick()}"
            android:text="@string/singInButton"
            app:layout_constraintEnd_toEndOf="@+id/b_login"
            app:layout_constraintStart_toStartOf="@+id/b_login"
            app:layout_constraintTop_toBottomOf="@+id/b_login" />

        <TextView
            android:id="@+id/b_lostpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/b_registre"
            app:layout_constraintStart_toStartOf="@+id/b_registre"
            app:layout_constraintTop_toBottomOf="@+id/b_registre" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>