<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UserEditActivity">

    <Button
        android:id="@+id/bt_ActivarOpcionsPerfil"
        android:layout_width="143dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:text="@string/editProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dibuixfotoperfil" />

    <Spinner
        android:id="@+id/spinnerBotigues"
        android:layout_width="302dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/bt_ActivarOpcionsPerfil"
        app:layout_constraintStart_toStartOf="@+id/bt_ActivarOpcionsPerfil"
        app:layout_constraintTop_toBottomOf="@+id/bt_ActivarOpcionsPerfil">

        <CheckBox
            android:id="@+id/checkBoxConsumidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumidor" />

        <CheckBox
            android:id="@+id/checkBoxBotiguer"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:text="@string/botiga_negoci" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTipusBotiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipus_de_botiga"
        app:layout_constraintBottom_toTopOf="@+id/spinnerBotigues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtTipusBotiga2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/definicio_botiga"
        app:layout_constraintBottom_toTopOf="@+id/editDefinicioBotiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBotigues"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/editDefinicioBotiga"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBotigues"
        app:layout_constraintVertical_bias="0.29" />

</androidx.constraintlayout.widget.ConstraintLayout>