<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterConfirmationActivity">

    <ImageView
        android:id="@+id/i_Logo2"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/thumbnail_height"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/as1" />

    <TextView
        android:id="@+id/t_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/i_Logo2"
        app:layout_constraintStart_toStartOf="@+id/i_Logo2"
        app:layout_constraintTop_toBottomOf="@+id/i_Logo2" />

    <Button
        android:id="@+id/b_LogIn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/logIn"
        app:layout_constraintEnd_toEndOf="@+id/t_welcome"
        app:layout_constraintStart_toStartOf="@+id/t_welcome"
        app:layout_constraintTop_toBottomOf="@+id/t_welcome" />
</androidx.constraintlayout.widget.ConstraintLayout>